# minimal_error

install/: local_setup.sh  setup.sh
install/my_package1/include/my_package1/: my_func.hpp
install/my_package1/share/my_package1/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_package2/share/my_package2/: package.bash  package.sh  package.zsh
log/: latest_build
src/my_package1/: CMakeLists.txt  package.xml
src/my_package1/include/my_package1/: my_func.hpp
src/my_package1/src/: my_func.cpp
src/my_package2/: CMakeLists.txt
src/my_package2/src/: node.cpp
